--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cucumber-example</groupId>
-    <artifactId>cucumber-example</artifactId>
+    <groupId>cucumber-java-example</groupId>
+    <artifactId>cucumber-java-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <build>
